@@ -431,7 +431,7 @@ class FTP:
         conn.close()
         return self.voidresp()
 
-    def storbinary(self, cmd, fp, blocksize=8192, callback=None):
+    def storbinary(self, cmd, fp, blocksize=8192, callback=None, rest=None):
         """Store a file in binary mode.  A new port is created for you.
 
         Args:
@@ -441,12 +441,13 @@ class FTP:
                      the connection at once.  [default: 8192]
           callback: An optional single parameter callable that is called on
                     on each block of data after it is sent.  [default: None]
+          rest: Passed to transfercmd().  [default: None]
 
         Returns:
           The response code.
         """
         self.voidcmd('TYPE I')
-        conn = self.transfercmd(cmd)
+        conn = self.transfercmd(cmd, rest)
         while 1:
             buf = fp.read(blocksize)
             if not buf: break
@@ -712,9 +713,9 @@ else:
                 conn.close()
             return self.voidresp()
 
-        def storbinary(self, cmd, fp, blocksize=8192, callback=None):
+        def storbinary(self, cmd, fp, blocksize=8192, callback=None, rest=None):
             self.voidcmd('TYPE I')
-            conn = self.transfercmd(cmd)
+            conn = self.transfercmd(cmd, rest)
             try:
                 while 1:
                     buf = fp.read(blocksize)
